--- a/prod/gists.html
+++ b/prod/gists.html
@@ -1,13 +1,27 @@
 <html>
   <body>
-    <h1>Haskell</h1>
-      <h2>Assignments</h2>
+    <h1>Swift</h1>
+      <h2>Variables</h2>
 
        <ul>
           <li>
-        <h4><a href='https://gist.github.com/claymcleod/904d7efaaeaa9a88e406/'>SandwichDSL</a><h4>
+        <h4><a href='https://gist.github.com/claymcleod/d66f08c06918cee065be/'>Lazy Initialization of Swift Variables</a><h4>
           <ul>
             <li>Authors: Clay McLeod</li>
+            <li>Description: An example of how to create a variable using lazy initialization in the Swift programming language.</li>
+
+          </ul>
+          </li>
+       </ul>
+    <h1>Learning Ruby</h1>
+      <h2>Simple Examples</h2>
+
+       <ul>
+          <li>
+        <h4><a href='https://gist.github.com/claymcleod/b3adc0a5ca47b716dd6b/'>Simple Ruby Datamining Example</a><h4>
+          <ul>
+            <li>Authors: Clay McLeod</li>
+            <li>Description: La tee da</li>
 
           </ul>
           </li>
@@ -17,7 +31,22 @@
 
        <ul>
           <li>
+        <h4><a href='https://gist.github.com/claymcleod/1613590bbfc8203c0797/'>Reddit Data Mining Script</a><h4>
+          <ul>
+            <li>Authors: Clay McLeod</li>
+            <li>Description: This script mines JSON data from the Reddit front page and stores it as a CSV file for analysis.</li>
+
+          </ul>
+          </li>
+          <li>
         <h4><a href='https://gist.github.com/claymcleod/26e2f380f4dda468fd56/'>Max subarray (Problem 2)</a><h4>
+          <ul>
+            <li>Authors: Clay McLeod</li>
+
+          </ul>
+          </li>
+          <li>
+        <h4><a href='https://gist.github.com/claymcleod/8db5cd9070c83c27524d/'>Sort nuts and bolts (Problem 3)</a><h4>
           <ul>
             <li>Authors: Clay McLeod</li>
 
@@ -28,21 +57,6 @@
           <ul>
             <li>Authors: Clay McLeod</li>
             <li>Description: Python edit distance problem</li>
-
-          </ul>
-          </li>
-          <li>
-        <h4><a href='https://gist.github.com/claymcleod/1613590bbfc8203c0797/'>Reddit Data Mining Script</a><h4>
-          <ul>
-            <li>Authors: Clay McLeod</li>
-            <li>Description: This script mines JSON data from the Reddit front page and stores it as a CSV file for analysis.</li>
-
-          </ul>
-          </li>
-          <li>
-        <h4><a href='https://gist.github.com/claymcleod/8db5cd9070c83c27524d/'>Sort nuts and bolts (Problem 3)</a><h4>
-          <ul>
-            <li>Authors: Clay McLeod</li>
 
           </ul>
           </li>
@@ -60,15 +74,14 @@
           </ul>
           </li>
        </ul>
-    <h1>Learning Ruby</h1>
-      <h2>Simple Examples</h2>
+    <h1>Haskell</h1>
+      <h2>Assignments</h2>
 
        <ul>
           <li>
-        <h4><a href='https://gist.github.com/claymcleod/b3adc0a5ca47b716dd6b/'>Simple Ruby Datamining Example</a><h4>
+        <h4><a href='https://gist.github.com/claymcleod/904d7efaaeaa9a88e406/'>SandwichDSL</a><h4>
           <ul>
             <li>Authors: Clay McLeod</li>
-            <li>Description: La tee da</li>
 
           </ul>
           </li>
