--- a/prod/gists.html
+++ b/prod/gists.html
@@ -1,17 +1,5 @@
 <html>
   <body>
-    <h1>Haskell</h1>
-      <h2>Assignments</h2>
-
-       <ul>
-          <li>
-        <h4><a href='https://gist.github.com/claymcleod/904d7efaaeaa9a88e406/'>SandwichDSL</a><h4>
-          <ul>
-            <li>Authors: Clay McLeod</li>
-
-          </ul>
-          </li>
-       </ul>
     <h1>Learning Ruby</h1>
       <h2>Simple Examples</h2>
 
@@ -51,9 +39,10 @@
           </ul>
           </li>
           <li>
-        <h4><a href='https://gist.github.com/claymcleod/26e2f380f4dda468fd56/'>Max subarray (Problem 2)</a><h4>
+        <h4><a href='https://gist.github.com/claymcleod/26e2f380f4dda468fd56/'>Max subarray</a><h4>
           <ul>
             <li>Authors: Clay McLeod</li>
+            <li>Description: Finds the max subarray of an array of integers</li>
 
           </ul>
           </li>
@@ -66,7 +55,7 @@
           </ul>
           </li>
           <li>
-        <h4><a href='https://gist.github.com/claymcleod/8db5cd9070c83c27524d/'>Sort nuts and bolts (Problem 3)</a><h4>
+        <h4><a href='https://gist.github.com/claymcleod/8db5cd9070c83c27524d/'>Sort nuts and bolts</a><h4>
           <ul>
             <li>Authors: Clay McLeod</li>
 
