Latest update to my gist collection example

--- a/prod/gists.html
+++ b/prod/gists.html
@@ -1,18 +1,5 @@
 <html>
   <body>
-    <h1>Learning Ruby</h1>
-      <h2>Simple Examples</h2>
-
-       <ul>
-          <li>
-        <h4><a href='https://gist.github.com/claymcleod/b3adc0a5ca47b716dd6b/'>Simple Ruby Datamining Example</a><h4>
-          <ul>
-            <li>Authors: Clay McLeod</li>
-            <li>Description: La tee da</li>
-
-          </ul>
-          </li>
-       </ul>
     <h1>MATLAB</h1>
       <h2>General</h2>
 
@@ -58,6 +45,19 @@
         <h4><a href='https://gist.github.com/claymcleod/8db5cd9070c83c27524d/'>Sort nuts and bolts</a><h4>
           <ul>
             <li>Authors: Clay McLeod</li>
+
+          </ul>
+          </li>
+       </ul>
+    <h1>Ruby</h1>
+      <h2>Simple Examples</h2>
+
+       <ul>
+          <li>
+        <h4><a href='https://gist.github.com/claymcleod/b3adc0a5ca47b716dd6b/'>Simple Ruby Datamining Example</a><h4>
+          <ul>
+            <li>Authors: Clay McLeod</li>
+            <li>Description: Mines data every minute concerning how many people are logged into a certain subreddit.</li>
 
           </ul>
           </li>
