Latest update to my gist collection example

--- a/prod/gists.html
+++ b/prod/gists.html
@@ -63,6 +63,18 @@
           </li>
        </ul>
     <h1>Swift</h1>
+      <h2>Gestures</h2>
+
+       <ul>
+          <li>
+        <h4><a href='https://gist.github.com/claymcleod/b46a1c84e39cddc868e7/'>Listening for Tap Gestures</a><h4>
+          <ul>
+            <li>Authors: Clay McLeod</li>
+            <li>Description: How to handle tap gestures on a view controller.</li>
+
+          </ul>
+          </li>
+       </ul>
       <h2>Variables</h2>
 
        <ul>
