--- a/prod/gists.html
+++ b/prod/gists.html
@@ -5,10 +5,10 @@
 
        <ul>
           <li>
-        <h4><a href='https://gist.github.com/claymcleod/6a6f7656d06f887ae046/'>Travelling Salesman</a><h4>
+        <h3><a href='https://gist.github.com/claymcleod/6a6f7656d06f887ae046/'>Travelling Salesman</a></h3>
           <ul>
-            <li>Authors: Clay McLeod</li>
-            <li>Description: Solution to the travelling salesman problem using simulated annealing in the MATLAB programming language</li>
+          <li>Authors: Clay McLeod</li>
+          <li>Description: Solution to the travelling salesman problem using simulated annealing in the MATLAB programming language</li>
 
           </ul>
           </li>
@@ -18,33 +18,33 @@
 
        <ul>
           <li>
-        <h4><a href='https://gist.github.com/claymcleod/f9ce092cfed501408ee6/'>Edit Distance</a><h4>
+        <h3><a href='https://gist.github.com/claymcleod/f9ce092cfed501408ee6/'>Edit Distance</a></h3>
           <ul>
-            <li>Authors: Clay McLeod</li>
-            <li>Description: Python edit distance problem</li>
+          <li>Authors: Clay McLeod</li>
+          <li>Description: Python edit distance problem</li>
 
           </ul>
           </li>
           <li>
-        <h4><a href='https://gist.github.com/claymcleod/26e2f380f4dda468fd56/'>Max subarray</a><h4>
+        <h3><a href='https://gist.github.com/claymcleod/26e2f380f4dda468fd56/'>Max subarray</a></h3>
           <ul>
-            <li>Authors: Clay McLeod</li>
-            <li>Description: Finds the max subarray of an array of integers</li>
+          <li>Authors: Clay McLeod</li>
+          <li>Description: Finds the max subarray of an array of integers</li>
 
           </ul>
           </li>
           <li>
-        <h4><a href='https://gist.github.com/claymcleod/1613590bbfc8203c0797/'>Reddit Data Mining Script</a><h4>
+        <h3><a href='https://gist.github.com/claymcleod/1613590bbfc8203c0797/'>Reddit Data Mining Script</a></h3>
           <ul>
-            <li>Authors: Clay McLeod</li>
-            <li>Description: This script mines JSON data from the Reddit front page and stores it as a CSV file for analysis.</li>
+          <li>Authors: Clay McLeod</li>
+          <li>Description: This script mines JSON data from the Reddit front page and stores it as a CSV file for analysis.</li>
 
           </ul>
           </li>
           <li>
-        <h4><a href='https://gist.github.com/claymcleod/8db5cd9070c83c27524d/'>Sort nuts and bolts</a><h4>
+        <h3><a href='https://gist.github.com/claymcleod/8db5cd9070c83c27524d/'>Sort nuts and bolts</a></h3>
           <ul>
-            <li>Authors: Clay McLeod</li>
+          <li>Authors: Clay McLeod</li>
 
           </ul>
           </li>
@@ -54,10 +54,10 @@
 
        <ul>
           <li>
-        <h4><a href='https://gist.github.com/claymcleod/b3adc0a5ca47b716dd6b/'>Simple Ruby Datamining Example</a><h4>
+        <h3><a href='https://gist.github.com/claymcleod/b3adc0a5ca47b716dd6b/'>Simple Ruby Datamining Example</a></h3>
           <ul>
-            <li>Authors: Clay McLeod</li>
-            <li>Description: Mines data every minute concerning how many people are logged into a certain subreddit.</li>
+          <li>Authors: Clay McLeod</li>
+          <li>Description: Mines data every minute concerning how many people are logged into a certain subreddit.</li>
 
           </ul>
           </li>
@@ -67,10 +67,10 @@
 
        <ul>
           <li>
-        <h4><a href='https://gist.github.com/claymcleod/b46a1c84e39cddc868e7/'>Listening for Tap Gestures</a><h4>
+        <h3><a href='https://gist.github.com/claymcleod/b46a1c84e39cddc868e7/'>Listening for Tap Gestures</a></h3>
           <ul>
-            <li>Authors: Clay McLeod</li>
-            <li>Description: How to handle tap gestures on a view controller.</li>
+          <li>Authors: Clay McLeod</li>
+          <li>Description: How to handle tap gestures on a view controller.</li>
 
           </ul>
           </li>
@@ -79,10 +79,10 @@
 
        <ul>
           <li>
-        <h4><a href='https://gist.github.com/claymcleod/d66f08c06918cee065be/'>Lazy Initialization of Swift Variables</a><h4>
+        <h3><a href='https://gist.github.com/claymcleod/d66f08c06918cee065be/'>Lazy Initialization of Swift Variables</a></h3>
           <ul>
-            <li>Authors: Clay McLeod</li>
-            <li>Description: An example of how to create a variable using lazy initialization in the Swift programming language.</li>
+          <li>Authors: Clay McLeod</li>
+          <li>Description: An example of how to create a variable using lazy initialization in the Swift programming language.</li>
 
           </ul>
           </li>
